  * Added animation for string with weather forecast description
  * Added United States(Alabama, Alaska,Arizona, Arkansas, Colorado, Connecticut, Delaware,Florida,Georgia,
    Hawaii,Idaho,Illinois,Indiana,Iowa,Kansas) to foreca.com database
  * Changed the name of city's-Hertogenbosch on Den Bosch (Netherlands) in foreca.com
  * Added Europe (Portugal, Spain) to foreca.com database

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 28 Mar 2011 21:42:23 +0200

meecast (0.5.6) unstable; urgency=low

  * Added Belgium, Albabnia, Andorra, Czech Republic, Hungary, Iceland, Italy,United States to foreca.com database
  * Changed the name of the location Vught on 's-Hertogenbosch
  * Fixed problem with current weather for weather.com source
  * Fixed problem with current weather for foreca.com source
  * Fixed problem with weather forecast for current day for weather.com source
  * Fixed problem with hour flike temperature for gismeteo.ru
  * Improvement in widget for standby screen
  * Added Dutch translation. Thanks Tom Leenders
  * Added Bulgarian translation. Thanks Zlatko Enikov	 
  * Updated Russian and Finish translations

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 28 Mar 2011 21:42:23 +0200

meecast (0.5.5) unstable; urgency=low

  * Added stations to foreca.com database (Austria)
  * Fixed problem with negative temperature in gismeteo.ru
  * Added icon for gismeteo.ru data
  * Fixed problem with Ppcp
  * Began adding the new source bom.fov.au

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 28 Mar 2011 21:42:23 +0200

meecast (0.5.4) unstable; urgency=low

  * Added stations to foreca.com database (Poland, Ukraine, Moldova, Latvia,
    Lithuania, Estonia, Romania, Norway, Denmark, Netherlands, Greece)
  * Added stations in yr.no database (Argentina)
  * Added Villa Angela to weather.com database 
  * Fixed problem with wind direction in source gismeteo.ru
  * Added icons and descriptions for foreca.com data
  * Updated Russian and Spain translations
