@@ -4,6 +4,7 @@
     g_hash_table_insert(hash, "d100.png", "34");
     g_hash_table_insert(hash, "n100.png", "33");
     g_hash_table_insert(hash, "d210.png", "39");
+    g_hash_table_insert(hash, "n210.png", "45");
     g_hash_table_insert(hash, "d220.png", "39");
     g_hash_table_insert(hash, "d221.png", "5");
     g_hash_table_insert(hash, "d222.png", "28");
@@ -35,6 +36,7 @@
     g_hash_table_insert(hash, "d420.png", "11");
     g_hash_table_insert(hash, "d422.png", "14");
     g_hash_table_insert(hash, "d430.png", "12");
+    g_hash_table_insert(hash, "n430.png", "12");
     g_hash_table_insert(hash, "d431.png", "5");
     g_hash_table_insert(hash, "n431.png", "5");
 
