@@ -9,6 +9,7 @@ meecast (0.5.7) unstable; urgency=low
     Hawaii,Idaho,Illinois,Indiana,Iowa,Kansas) to foreca.com database
   * Changed the name of city's-Hertogenbosch on Den Bosch (Netherlands) in foreca.com
   * Added Europe (Portugal, Spain) to foreca.com database
+  * Added descriptions of icons for foreca.com data
 
  -- Vlad Vasiliev <vlad@gas.by>  Wed, 28 Mar 2011 21:42:23 +0200
 
